# remember-mcp

./: .dropboxignore  .gitignore  CHANGELOG.md  README.md  example.py  list_tools.py  pyproject.toml  requirements.txt  sbom.json  server.py  setup.py  test_complete.py  test_file_indexing.py  test_recall.py  test_tools.py  test_tools_async.py
remember/: __init__.py  file_indexer.py  scheduler.py  system.py  types.py
remember/mcp/: __init__.py  server.py  server_fastmcp.py
tests/: __init__.py  list_tools.py  test_archival.py  test_file_indexing.py  test_handshake_timing.py  test_recall.py  test_tools.py  test_tools_async.py
