[project]
name = "remember-mcp"
version = "1.0.0"
description = "Hybrid memory MCP server combining OpenMemory (active) and memvid (archive)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp==2.10.5",
    "pydantic<2.12",
    "numpy>=2.0",
    "scipy>=1.14",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "openmemory-python>=1.0.0",
    "memvid>=0.1.4",
    "schedule>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/danielsimonjr/remember-mcp"
Repository = "https://github.com/danielsimonjr/remember-mcp"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["remember"]

[tool.uv]
# Prevent building these packages from source - use pre-built wheels only
# Python 3.13 has stable wheel support for numpy >=2.0 and scipy >=1.14
no-build-package = ["scipy", "numpy"]

[tool.uv.sources]
memvid = { git = "https://github.com/danielsimonjr/memvid.git", branch = "main" }
