[project]
name = "remember-mcp"
version = "1.0.2"
description = "Hybrid memory MCP server combining OpenMemory (active) and memvid (archive)"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastmcp==2.10.5",
    "mcp==1.12.0",
    "pydantic==2.11.7",
    "numpy>=2.0",
    "scipy>=1.14",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "openmemory-python>=1.0.0",
    "memvid>=0.1.4",
    "schedule>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/danielsimonjr/remember-mcp"
Repository = "https://github.com/danielsimonjr/remember-mcp"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["remember"]

[tool.uv]
# Prevent building these packages from source - use pre-built wheels only
# Python 3.13 has stable wheel support for numpy >=2.0 and scipy >=1.14
no-build-package = ["scipy", "numpy"]

[tool.uv.sources]
memvid = { git = "https://github.com/danielsimonjr/memvid.git", branch = "main" }

[tool.pytest.ini_options]
# async tests use pytest-asyncio in auto mode (no @pytest.mark.asyncio needed)
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
